# cmake_template

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_ja.md  c  c.bat  project_config.toml  pyproject.toml
.github/workflows/: build.yml
.github/workflows/scripts/: summarize.py
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cc  app.h  cli_handler.cc  init_handler.cc  init_handler.h  main.cc  preinit_handler.cc  prelaunch_handler.cc  prelaunch_handler.h  sample_test.cc  win_main.cc
src/bench/: CMakeLists.txt  bench_main.cc
src/benchmark/: CMakeLists.txt
src/core/: CMakeLists.txt  check.cc  check.h  location.cc  location.h  location_test.cc
src/core/base/: core.cc  core.h  file_manager.cc  file_manager.h  file_util.cc  file_util.h  file_util_bench.cc  file_util_benchmark.cc  file_util_build_info.cc  range.h  source_range.h  string_util.cc  string_util.h  string_util_bench.cc  string_util_benchmark.cc  vec.h
src/core/cli/: arg_parser.cc  arg_parser.h  arg_parser_build_info.cc  console.cc  console.h
src/core/cli/ansi/: progress_bar.cc  progress_bar.h  style_builder.cc  style_builder.h  style_util.h
src/core/diagnostics/: signal_handler.cc  stack_trace.cc  stack_trace.h  stack_trace_entry.cc  stack_trace_entry.h  system_info.cc  system_info.h  system_info_test.cc  terminate_handler.cc
src/testing/: CMakeLists.txt  test_main.cc
